[gd_scene load_steps=14 format=3 uid="uid://3cmvat50tv12"]

[ext_resource type="Script" path="res://scenes/Sequencer.gd" id="1_2sihc"]
[ext_resource type="Texture2D" uid="uid://bbiu6ywr2xfl1" path="res://icons/Add.png" id="1_5hp7c"]
[ext_resource type="Texture2D" uid="uid://b2a2gegy6yij3" path="res://icons/PlayStartBackwards.png" id="1_w8xkk"]
[ext_resource type="Texture2D" uid="uid://br3fjrbblqywp" path="res://icons/PlayBackwards.png" id="2_csea2"]
[ext_resource type="Texture2D" uid="uid://dxdbp3d5t4f28" path="res://icons/Stop.png" id="3_qhgue"]
[ext_resource type="Texture2D" uid="uid://bn2kjy7h7vk8e" path="res://icons/Play.png" id="4_f5mm4"]
[ext_resource type="Texture2D" uid="uid://bu232vjuq7bpl" path="res://icons/Blend.png" id="4_la3ev"]
[ext_resource type="Texture2D" uid="uid://cl6uyhyp8i2cx" path="res://icons/PlayStart.png" id="5_bj58l"]
[ext_resource type="Script" path="res://scripts/ui/TrackTree.gd" id="6_tw30q"]
[ext_resource type="Texture2D" uid="uid://bpafgc1rqgxtf" path="res://icons/Folder.png" id="7_qr5w6"]
[ext_resource type="Texture2D" uid="uid://ceyx6qtd408xs" path="res://icons/FontItem.png" id="8_6e0xm"]
[ext_resource type="Theme" uid="uid://cyjh5uyspkac1" path="res://tmp/test_theme.tres" id="10_sv3yk"]
[ext_resource type="Script" path="res://scenes/TrackPanel.gd" id="13_v7ab5"]

[node name="Sequencer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2sihc")
metadata/_edit_horizontal_guides_ = [79.0]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="top_hbox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ControllFill" type="Control" parent="MarginContainer/VBoxContainer/top_hbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="btn_skip_rev" type="Button" parent="MarginContainer/VBoxContainer/top_hbox"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
icon = ExtResource("2_csea2")
expand_icon = true

[node name="btn_play_rev" type="Button" parent="MarginContainer/VBoxContainer/top_hbox"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
icon = ExtResource("1_w8xkk")
expand_icon = true

[node name="btn_stop" type="Button" parent="MarginContainer/VBoxContainer/top_hbox"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
icon = ExtResource("3_qhgue")
expand_icon = true

[node name="btn_play" type="Button" parent="MarginContainer/VBoxContainer/top_hbox"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
icon = ExtResource("5_bj58l")
expand_icon = true

[node name="btn_skip" type="Button" parent="MarginContainer/VBoxContainer/top_hbox"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
icon = ExtResource("4_f5mm4")
expand_icon = true

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/top_hbox"]
custom_minimum_size = Vector2(30, 2.08165e-12)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/top_hbox"]
layout_mode = 2
text = "Frame:"

[node name="SpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/top_hbox"]
layout_mode = 2
allow_greater = true

[node name="ControllFill2" type="Control" parent="MarginContainer/VBoxContainer/top_hbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AddButton" type="MenuButton" parent="MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 32)
layout_mode = 2
text = "Add Track"
icon = ExtResource("1_5hp7c")
flat = false
alignment = 0
expand_icon = true
item_count = 3
popup/item_0/text = "BVH Track"
popup/item_0/icon = ExtResource("7_qr5w6")
popup/item_1/text = "Text To Motion Track"
popup/item_1/icon = ExtResource("8_6e0xm")
popup/item_1/id = 1
popup/item_2/text = "Tween Track"
popup/item_2/icon = ExtResource("4_la3ev")
popup/item_2/id = 2

[node name="TrackTree" type="Tree" parent="MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 3
hide_root = true
script = ExtResource("6_tw30q")

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="TimelineScrollBar" type="HScrollBar" parent="MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("10_sv3yk")

[node name="TrackPanelScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="TrackPanel" type="Panel" parent="MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer2/TrackPanelScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2000, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("13_v7ab5")

[node name="bottom_hbox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/bottom_hbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/bottom_hbox"]
layout_mode = 2
text = "Status:"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/bottom_hbox"]
custom_minimum_size = Vector2(400, 2.08165e-12)
layout_mode = 2
text = "Processing Layers ..."
editable = false

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/bottom_hbox"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
value = 16.0
